LightTube/wwwroot/css/lighttube.css
/* ... */
@media screen and (min-width: 700px) {
    .app {
        margin-left: 240px;
    }

    .guide {
        width: 240px;
    }
}

@media screen and (min-width: 700px) and (max-width: 1312px) {
    .app {
        margin-left: 72px;
    }

    .guide {
        width: 72px;
    }
}

@media screen and (min-width: 700px) {
    .hide-on-mobile {
    }

    .hide-on-desktop {
        display: none !important;
    }

    .guide {
        position: fixed;
        top: 56px;
        bottom: 0;
    }

    .app {
        margin-top: 56px;
    }
}

@media screen and (max-width: 700px) {
    .hide-on-mobile {
        display: none !important;
    }

    .hide-on-desktop {
    }

    .top-bar {
        border-bottom: 1px solid var(--border-color);
    }

    .guide {
        display: flex;
        flex-direction: row;
        align-items: center;
        justify-content: space-evenly;
        border-top: 1px solid var(--border-color);
        width: 100vw;
        position: fixed;
        bottom: 0;
        left: 0;
        right: 0;
    }

    .app {
        width: 100vw;
        margin-top: 56px;
        padding-bottom: 48px;
    }
}

body.no-guide {
    grid-template-columns: 100vw;
    grid-template-rows: 56px 1fr;
    grid-template-areas: "top-bar" "app";
}

body.no-guide .guide {
    display: none;
}

body.no-guide .app {
    margin-left: 0;
}

/* Guide */

.guide-item {
    text-decoration: none;
    color: var(--text-primary);
}

.guide > hr {
    border-color: var(--border-color);
    margin: 10px 12px;
}

@media screen and (min-width: 1312px) {
    .guide-item:hover {
        background-color: var(--button-hover-background);
    }

    .guide-item:active {
        background-color: var(--button-active-background);
    }

    .guide-item {
        display: flex;
        flex-direction: row;
        align-items: center;
        width: 180px;
        height: 40px;
        margin: 6px 12px;
        padding: 0 12px;
        border-radius: 8px;
    }

    .guide-item__icon {
        margin-right: 24px;
    }

    .guide-item__small {

    }

    .guide-item__active {
        background-color: var(--chip-background);
        font-weight: bold;
    }
}

@media screen and (min-width: 700px) and (max-width: 1312px) {
    .guide-item:hover {
        background-color: var(--button-hover-background);
    }

    .guide-item:active {
        background-color: var(--button-active-background);
    }

    .guide-item {
        display: none;
        flex-direction: column;
        align-items: center;
        justify-content: center;
        width: 64px;
        height: 44px;
        padding-top: 16px;
        padding-bottom: 14px;
        border-radius: 8px;
    }

    .guide-item__label {
        font-size: xx-small;
    }

    .guide-item__small {
        display: flex;
    }

    .guide > hr {
        display: none;
    }
}

@media screen and (max-width: 700px) {
    .guide-item {
        display: none;
        flex-direction: column;
        align-items: center;
        justify-content: center;
        width: 100%;
        height: 48px;
        border-radius: 8px;
    }

    .guide-item__label {
        font-size: xx-small;
    }

    .guide-item__small {
        display: flex;
    }

    .guide > hr {
        display: none;
    }
}

/* Logo */

.logo {
    font-size: large;
    line-height: 56px;
    color: var(--text-primary);
    white-space: nowrap;
    margin-left: 16px;
    text-decoration: none;
}

.region {
    font-size: small;
    color: var(--text-secondary);
}

/* Search bar */

.search-bar {
    height: 40px;
    display: flex;
    width: 100%;
    max-width: 640px;
    margin: 0 16px;
}

.search-bar__input {
    width: 100%;
    flex-grow: 1;
    padding: 0 16px !important;
    border: 1px solid var(--border-color) !important;
    border-radius: 20px 0 0 20px !important;
    background-color: var(--search-bar-background, #0000) !important;
    outline: none;
}

.search-bar__input::placeholder {
    color: var(--text-secondary);
    font-size: larger;
}

.search-bar__submit {
    width: 64px;
    flex-shrink: 0;
    border: 1px solid var(--border-color);
    border-bottom-right-radius: 20px;
    border-top-right-radius: 20px;
    font-size: .7rem;
    display: flex;
    justify-content: center;
    align-items: center;
    background-color: var(--context-menu-background);
}

/* Account buttons */

.account-buttons {
    display: flex;
    flex-direction: row;
    gap: 8px;
    margin-right: 16px;
}

/* The menu dropdown thing */

.dropdown {
    position: relative;
    display: flex;
}

.dropdown > input[type="checkbox"] {
    display: none;
}

.dropdown > label {
    width: 100%;
    height: 100%;
    margin: -8px;
    padding: 8px;
    display: flex;
    align-items: center;
    justify-content: center;
}

.dropdown__menu {
    position: absolute;
    z-index: 999;
    display: none;
    top: 40px;
    padding: 6px 0;
    margin: 0;
    width: 300px;
    border-radius: 8px;
    box-shadow: var(--border-color) 0 0 5px;
    background-color: var(--context-menu-background)
}

.dropdown__item {
    display: flex;
    flex-direction: row;
    align-items: center;
    padding: 0 16px;
    height: 40px;
    column-gap: 16px;
    color: var(--text-primary);
    text-decoration: none;
}

.dropdown__item:hover {
    background-color: var(--chip-background-hover);
}

.dropdown__item:active {
    background-color: var(--chip-background-active);
}

.dropdown > input[type="checkbox"]:checked ~ div,
.dropdown__menu:target {
    display: block;
}

/* Buttons / Form Elements */

.icon-button-container {
    height: auto;
    display: flex;
    align-items: center;
    justify-content: center;
}

.icon-button {
    width: 24px;
    height: 24px;
    color: #000;
    padding: 8px;
    transition: background-color linear 100ms;
    border-radius: 50%;

    display: flex;
    justify-content: center;
    align-items: center;
}

.icon-button:hover {
    background-color: var(--button-hover-background);
}
/* ... */

